--- a/calcu.html
+++ b/calcu.html
@@ -1,9 +1,13 @@
 <p id="n1">9</p>
 <p id="n2">11</p>
 <hr>
+><h3 id="res">###</h3>
 <script>
     function sumar (n1,n2){
         return n1+n2;
     }
     var n1 = document.getElementById("n1").innerText;
+    var n2 = document.getElementById("n2").innerText;
+
+    document.getElementById("res").innerText = sumar(n1,n2);
 </script>
