--- a/calcu.html
+++ b/calcu.html
@@ -1,10 +1,11 @@
 <p id="n1">9</p>
 <p id="n2">11</p>
 <hr>
-><h3 id="res">###</h3>
+<h1>Te quiero</h1>
+<h3 id="res">###</h3>
 <script>
     function sumar (n1,n2){
-        return n1+n2;
+        return parseInt(n1)+parseInt(n2);
     }
     var n1 = document.getElementById("n1").innerText;
     var n2 = document.getElementById("n2").innerText;
